--- a/src/components/RightGrid/RightGrid.css
+++ b/src/components/RightGrid/RightGrid.css
@@ -37,7 +37,7 @@
     justify-content: space-around;
     align-items: flex-start;
     flex-direction: column;
-    padding-bottom: 10%;
+    margin-bottom: 15%;
 }
 
 .RightSubQuestionGrid span{
@@ -48,30 +48,16 @@
     margin-bottom: 3%;
 }
 
-.RightSubQuestionGrid .ui.form{
-    display: flex;
-    flex-direction: row;
-}
-
-.RightSubQuestionGrid .ui.form .field{
-    margin-bottom: 0;
-    margin-right: 1vw;
-}
-
 .RightSubQuestionGrid .ui.checkbox label{
     font-family: 'Noto Sans KR', sans-serif;
-    font-size: 1.8vh;
+    font-size: 1.5vh;
+    margin-bottom: 1.2vh;
 }
 
-/* .RightSubQuestionGrid .ui.radio.checkbox label:before{
-    height: 20px;
-    width: 20px;
+.RightSubQuestionGrid .ui.label{
+    font-size: 1.3vh;
+    margin-bottom: 1.2vh;
 }
-
-.RightSubQuestionGrid .ui.radio.checkbox label:after{
-    height: 20px;
-    width: 20px;
-} */
 
 .RightTextGrid{
     position: absolute;
