--- a/src/components/MessageList/Message.css
+++ b/src/components/MessageList/Message.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap');
 
 div {
@@ -17,8 +18,9 @@ div {
 .messageSectionBody {
     padding: 1.2vh 2vw;
     border-radius: 5px;
-    font-size: 2vh;
-    font-family: 'Roboto', sans-serif;
+    font-size: 1.8vh;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 2;
     line-height: 150%;
     margin-bottom: 2.2vh;
 }
